[package]
name = "imagepig"
version = "1.0.2"
edition = "2021"
authors = ["Pavel Mises <pavel@double.plus>"]
description = "Package to use Image Pig, the API for AI images"
license = "MIT"
homepage = "https://imagepig.com"
repository = "https://github.com/double-plus/imagepig-rust"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["macros"] }
url = "2.5.3"
